# gut_microbiome_project

./: .gitignore  Contributing.md  README.md  README_EMBEDDINGS.md  config.yaml  data_loading.py  experiment-tracking.md  generate_embeddings.py  main.py  predict_hla.py  predict_milk.py  pyproject.toml  readme.md  utils.py
configs/: base.yaml  diabimmune.yaml  gadir.yaml  goldberg.yaml  tanaka.yaml
data_preprocessing/: readme.md
data_preprocessing/datasets/: U.csv  sample_data.csv
data_preprocessing/datasets_preprocessing_scripts/goldberg/: time_ers_samples_data_preparation_v4.ipynb
data_preprocessing/raw_data_processing/goldberg/downloaded_data/: SraRunTable.csv  download_samples_tsv.tsv
modules/: classifier.py
utils/: data_utils.py  evaluation_utils.py  tracking_utils.py
